--- a/Tickette.Domain/Tickette.Domain.csproj
+++ b/Tickette.Domain/Tickette.Domain.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Folder Include="Enums\" />
     <Folder Include="Common\" />
+    <Folder Include="ValueObjects\" />
   </ItemGroup>
 
   <ItemGroup>
