feat: Category, Committee Members table

--- a/Tickette.Infrastructure/Tickette.Infrastructure.csproj
+++ b/Tickette.Infrastructure/Tickette.Infrastructure.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <Folder Include="Data\Configurations\" />
     <Folder Include="Helpers\" />
+    <Folder Include="FileStorage\" />
   </ItemGroup>
 
   <ItemGroup>
