feat: JWT and Identity auth

--- a/Tickette.API/appsettings.json
+++ b/Tickette.API/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=tickette-db;Username=HaiNguyen;Password=root"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    // Stole this secret key, I will use another one in user secret :D
+    "Key": "Tmd1eWVuSG9hbmdIYWlUaGF0TGFEZXBUcmFpISEhIQ0K",
+    "Issuer": "http://localhost:7190",
+    "Audience": "http://localhost:7190"
+  }
 }
