feat: booking ticket

--- a/Tickette.Application/Tickette.Application.csproj
+++ b/Tickette.Application/Tickette.Application.csproj
@@ -20,6 +20,7 @@
     <Folder Include="Features\CommitteeMembers\Command\AddCommitteeMember\" />
     <Folder Include="Features\CommitteeMembers\Command\ChangeCommitteeMemberRole\" />
     <Folder Include="Features\CommitteeMembers\Query\GetAllCommitteeMemberOfEvent\" />
+    <Folder Include="Features\Tickets\Query\" />
   </ItemGroup>
 
 </Project>
