--- a/Tickette.Infrastructure/Tickette.Infrastructure.csproj
+++ b/Tickette.Infrastructure/Tickette.Infrastructure.csproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <Folder Include="FileStorage\" />
     <Folder Include="Authentication\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
