feat: qr code generator for order item and validation for the order item

--- a/Tickette.API/appsettings.json
+++ b/Tickette.API/appsettings.json
@@ -14,5 +14,6 @@
     "Key": "Tmd1eWVuSG9hbmdIYWlUaGF0TGFEZXBUcmFpISEhIQ0K",
     "Issuer": "http://localhost:7190",
     "Audience": "http://localhost:7190"
-  }
+  },
+  "QrCodeSecretKey": "Tmd1eWVuSG9hbmdIYWlUaGF0TGFEZXBUcmFpISEhIQ0K"
 }
