--- a/Tickette.Application/Tickette.Application.csproj
+++ b/Tickette.Application/Tickette.Application.csproj
@@ -21,6 +21,7 @@
     <Folder Include="Features\CommitteeMembers\Command\ChangeCommitteeMemberRole\" />
     <Folder Include="Features\CommitteeMembers\Query\GetAllCommitteeMemberOfEvent\" />
     <Folder Include="Features\Orders\Command\" />
+    <Folder Include="Features\QRCode\Commands\" />
     <Folder Include="Features\Tickets\Query\" />
   </ItemGroup>
 
