--- a/Tickette.Infrastructure/Tickette.Infrastructure.csproj
+++ b/Tickette.Infrastructure/Tickette.Infrastructure.csproj
@@ -34,6 +34,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Authorization\Handlers\" />
+    <Folder Include="Authorization\Requirements\" />
     <Folder Include="FileStorage\" />
     <Folder Include="Authentication\" />
     <Folder Include="Repositories\" />
