feat: create a mock message broker to lock ticket with RabbitMQ and first commit in Lunar New Year

--- a/Tickette.API/appsettings.json
+++ b/Tickette.API/appsettings.json
@@ -15,5 +15,11 @@
     "Issuer": "http://localhost:7190",
     "Audience": "http://localhost:3000"
   },
-  "QrCodeSecretKey": "Tmd1eWVuSG9hbmdIYWlUaGF0TGFEZXBUcmFpISEhIQ0K"
+  "QrCodeSecretKey": "Tmd1eWVuSG9hbmdIYWlUaGF0TGFEZXBUcmFpISEhIQ0K",
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "Port": "5672",
+    "Username": "guest",
+    "Password": "guest"
+  }
 }
