--- a/Tickette.Application/Tickette.Application.csproj
+++ b/Tickette.Application/Tickette.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.11.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,14 +16,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\Auth\" />
+    <Folder Include="Events\Handlers\" />
+    <Folder Include="Events\Models\" />
     <Folder Include="Features\Auth\Query\" />
     <Folder Include="Features\Categories\Common\" />
     <Folder Include="Features\CommitteeMembers\Command\AddCommitteeMember\" />
     <Folder Include="Features\CommitteeMembers\Command\ChangeCommitteeMemberRole\" />
     <Folder Include="Features\CommitteeMembers\Query\GetAllCommitteeMemberOfEvent\" />
     <Folder Include="Features\Events\Queries\GetEventByUserId\" />
-    <Folder Include="Features\Orders\Command\" />
     <Folder Include="Features\QRCode\Commands\" />
     <Folder Include="Features\Tickets\Query\" />
     <Folder Include="Factories\" />
