--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,20 @@ services:
       timeout: 5s
       retries: 5
 
+  rabbitmq:
+      image: rabbitmq:management
+      container_name: tickette_rabbitmq
+      environment:
+        RABBITMQ_DEFAULT_USER: guest
+        RABBITMQ_DEFAULT_PASS: guest
+      ports:
+        - "5672:5672"       # RabbitMQ communication port
+        - "15672:15672"     # RabbitMQ Management UI port
+      healthcheck:
+        test: ["CMD-SHELL", "rabbitmq-diagnostics ping"]
+        interval: 10s
+        timeout: 5s
+        retries: 5
+
 volumes:
   postgres_data:
