feat(add): basic resevere ticket without seats

--- a/Tickette.API/appsettings.json
+++ b/Tickette.API/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=tickette-db;Username=HaiNguyen;Password=root"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=tickette-db;Username=HaiNguyen;Password=root",
+    "Redis": "localhost:6379"
   },
   "AllowedHosts": "*",
   "Jwt": {
