--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,16 @@ services:
         interval: 10s
         timeout: 5s
         retries: 5
+  redis:
+      image: redis:latest
+      container_name: redis_cache
+      ports:
+        - "6379:6379"
+      volumes:
+        - redis_data:/data
+      command: ["redis-server", "--appendonly", "yes"]
 
 volumes:
   postgres_data:
+  redis_data:
+    driver: local
