--- a/Tickette.Application/Tickette.Application.csproj
+++ b/Tickette.Application/Tickette.Application.csproj
@@ -23,9 +23,11 @@
     <Folder Include="Features\CommitteeMembers\Query\GetAllCommitteeMemberOfEvent\" />
     <Folder Include="Features\Events\Queries\GetEventByUserId\" />
     <Folder Include="Features\Orders\Command\CreateOrder\" />
+    <Folder Include="Features\Orders\Command\CreatePaymentIntent\" />
     <Folder Include="Features\QRCode\Commands\" />
     <Folder Include="Features\Tickets\Query\" />
     <Folder Include="Factories\" />
+    <Folder Include="Features\Users\Command\" />
   </ItemGroup>
 
 </Project>
