--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
-version: '3.8'
+name: tickette
+version: "3.8"
 
 services:
   db:
     image: postgres:15
-    container_name: tickette_container
+    container_name: local-database
     environment:
       POSTGRES_USER: HaiNguyen
       POSTGRES_PASSWORD: root
@@ -19,30 +20,47 @@ services:
       timeout: 5s
       retries: 5
 
+  ai-training-db:
+    image: postgres:15
+    container_name: local-database-for-ai
+    environment:
+      POSTGRES_USER: ai_user
+      POSTGRES_PASSWORD: ai_password
+      POSTGRES_DB: ai_training
+    ports:
+      - "5433:5432"
+    volumes:
+      - ai_db_data:/var/lib/postgresql/data
+      - ./init-training.sql:/docker-entrypoint-initdb.d/init-training.sql
+    depends_on:
+      - db
+
   rabbitmq:
-      image: rabbitmq:management
-      container_name: tickette_rabbitmq
-      environment:
-        RABBITMQ_DEFAULT_USER: guest
-        RABBITMQ_DEFAULT_PASS: guest
-      ports:
-        - "5672:5672"       # RabbitMQ communication port
-        - "15672:15672"     # RabbitMQ Management UI port
-      healthcheck:
-        test: ["CMD-SHELL", "rabbitmq-diagnostics ping"]
-        interval: 10s
-        timeout: 5s
-        retries: 5
+    image: rabbitmq:management
+    container_name: local-rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+    ports:
+      - "5672:5672" # RabbitMQ communication port
+      - "15672:15672" # RabbitMQ Management UI port
+    healthcheck:
+      test: ["CMD-SHELL", "rabbitmq-diagnostics ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   redis:
-      image: redis:latest
-      container_name: redis_cache
-      ports:
-        - "6379:6379"
-      volumes:
-        - redis_data:/data
-      command: ["redis-server", "--appendonly", "yes"]
+    image: redis:latest
+    container_name: local-redis-cache
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: ["redis-server", "--appendonly", "yes"]
 
 volumes:
   postgres_data:
   redis_data:
+  ai_db_data:
     driver: local
