feat: background service for automate clean up for uncancelled reservation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,12 +52,12 @@ services:
 
   redis:
     image: redis:latest
-    container_name: local-redis-cache
+    container_name: local-redis
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
-    command: ["redis-server", "--appendonly", "yes"]
+    command: ["redis-server", "--appendonly", "yes", "--notify-keyspace-events", "Ex"]
 
 volumes:
   postgres_data:
