--- a/Tickette.Infrastructure/Tickette.Infrastructure.csproj
+++ b/Tickette.Infrastructure/Tickette.Infrastructure.csproj
@@ -38,6 +38,7 @@
     <PackageReference Include="QRCoder" Version="1.6.0" />
     <PackageReference Include="RabbitMQ.Client" Version="7.0.0" />
     <PackageReference Include="RazorLight" Version="2.3.1" />
+    <PackageReference Include="RedLock.net" Version="2.3.2" />
     <PackageReference Include="Scrutor" Version="5.0.2" />
     <PackageReference Include="SkiaSharp" Version="3.116.1" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.24" />
