fix: rabbitMQ flow to reserve ticket

--- a/Tickette.Application/Tickette.Application.csproj
+++ b/Tickette.Application/Tickette.Application.csproj
@@ -34,6 +34,7 @@
     <Folder Include="Features\Tickets\Command\" />
     <Folder Include="Features\Tickets\Query\" />
     <Folder Include="Factories\" />
+    <Folder Include="Features\Users\Command\Admin\" />
   </ItemGroup>
 
 </Project>
