mod: improve spamming reserve ticket

--- a/Tickette.Infrastructure/Tickette.Infrastructure.csproj
+++ b/Tickette.Infrastructure/Tickette.Infrastructure.csproj
@@ -58,4 +58,10 @@
     <ProjectReference Include="..\Tickette.Domain\Tickette.Domain.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<None Update="Persistence\Redis\Scripts\*.lua">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
 </Project>
