fix: reservation clean up

--- a/Tickette.Application/Tickette.Application.csproj
+++ b/Tickette.Application/Tickette.Application.csproj
@@ -35,6 +35,7 @@
     <Folder Include="Features\Tickets\Query\" />
     <Folder Include="Factories\" />
     <Folder Include="Features\Users\Command\Admin\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
 
 </Project>
