--- a/Tickette.Admin/appsettings.Development.json
+++ b/Tickette.Admin/appsettings.Development.json
@@ -4,5 +4,28 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "Port": "5672",
+    "Username": "guest",
+    "Password": "guest"
+  },
+  "Redis": {
+    "ConnectionString": "localhost:6379",
+    "InstanceName": "Tickette:",
+    "Password": "",
+    "Ssl": false,
+    "ConnectTimeout": 5000,
+    "SyncTimeout": 5000,
+    "ConnectRetry": 3,
+    "AbortOnConnectFail": false,
+    "DefaultExpirationMinutes": 15,
+    "TicketCacheExpirationMinutes": 15,
+    "AgentCacheExpirationMinutes": 15,
+    "DefaultDatabase": 0,
+    "AllowAdmin": false,
+    "Host": "localhost",
+    "Port": 6379
   }
 }
