--- a/Tickette.API/appsettings.json
+++ b/Tickette.API/appsettings.json
@@ -6,8 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=tickette-db;Username=HaiNguyen;Password=root;Pooling=true;Maximum Pool Size=100",
-    "TrainingAIConnection": "Host=localhost;Port=5433;Database=ai_training;Username=ai_user;Password=ai_password"
+    "DefaultConnection": "Host=db;Port=5432;Database=tickette-db;Username=HaiNguyen;Password=root;Pooling=true;Maximum Pool Size=100"
   },
   "AllowedHosts": "*"
 }
