--- a/Tickette.Admin/appsettings.json
+++ b/Tickette.Admin/appsettings.json
@@ -6,8 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=tickette-db;Username=HaiNguyen;Password=root",
-    "TrainingAIConnection": "Host=localhost;Port=5433;Database=ai_training;Username=ai_user;Password=ai_password"
-  },
+    "DefaultConnection": "Host=db;Port=5432;Database=tickette-db;Username=HaiNguyen;Password=root"  },
   "AllowedHosts": "*"
 }
