--- a/Tickette.Admin/appsettings.Development.json
+++ b/Tickette.Admin/appsettings.Development.json
@@ -6,13 +6,13 @@
     }
   },
   "RabbitMQ": {
-    "HostName": "localhost",
+    "HostName": "rabbitmq",
     "Port": "5672",
     "Username": "guest",
     "Password": "guest"
   },
   "Redis": {
-    "ConnectionString": "localhost:6379",
+    "ConnectionString": "redis:6379",
     "InstanceName": "Tickette:",
     "Password": "",
     "Ssl": false,
@@ -25,7 +25,7 @@
     "AgentCacheExpirationMinutes": 15,
     "DefaultDatabase": 0,
     "AllowAdmin": false,
-    "Host": "localhost",
+    "Host": "redis",
     "Port": 6379
   }
 }
