--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,35 @@
 name: tickette
-version: "3.8"
+
+networks:
+  tickette-network:
+    name: tickette-network
+    external: true
 
 services:
+  tickette.api:
+    image: ${DOCKER_REGISTRY-}ticketteapi
+    container_name: tickette.api
+    build:
+      context: .
+      dockerfile: Tickette.API/Dockerfile
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - tickette-network
+
+  tickette.admin:
+    image: ${DOCKER_REGISTRY-}ticketteadmin
+    container_name: tickette.admin
+    build:
+      context: .
+      dockerfile: Tickette.Admin/Dockerfile
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - tickette-network
+
   db:
     image: postgres:15
     container_name: local-database
@@ -14,6 +42,8 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init-scripts:/docker-entrypoint-initdb.d
+    networks:
+      - tickette-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U HaiNguyen -d tickette-db"]
       interval: 10s
@@ -29,6 +59,8 @@ services:
     ports:
       - "5672:5672" # RabbitMQ communication port
       - "15672:15672" # RabbitMQ Management UI port
+    networks:
+      - tickette-network
     healthcheck:
       test: ["CMD-SHELL", "rabbitmq-diagnostics ping"]
       interval: 10s
@@ -42,10 +74,10 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    networks:
+      - tickette-network
     command: ["redis-server", "--appendonly", "yes", "--notify-keyspace-events", "Ex"]
 
 volumes:
   postgres_data:
   redis_data:
-  ai_db_data:
-    driver: local
